# eCR_mod_lib

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: sources.yaml
data/manual/: DelRosso_2023_SupTable.xlsx  EpiGenes_main.csv  Ludwig_2023_mmc4.xlsx  Staller_2022_mmc2.csv  Staller_2022_mmc4.csv  Staller_2022_mmc5.csv  Staller_2022_predictions.csv  TENet_2024_media-6.xlsx  cr_curated.yaml  ed_curated.yaml
data/raw/: download_manifest.json
literature/: .gitignore  01_search.py  02_triage.py  03_record.py  papers.yaml  search_queries.yaml
literature/reviews/: review_2026-05-29.md  review_2026-05-30.md
scripts/: 01_fetch_dbd.py  02_seed_ed.py  03_fetch_cr.py  04_build_library.py  05_validate.py  __init__.py  prepare_staller2022.py  schema.py  utils.py
