[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ecr_mod_lib"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "requests",
    "pyyaml",
    "tqdm",
    "openpyxl",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
